# UniEngine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
android/: settings.gradle
android/app/src/main/java/com/universe/unilauncher/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/universe/unilauncher/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
externs/: uni_app_base.h  uni_glfw_app_base.cpp  uni_glfw_app_base.h  uni_sample_app.cpp  uni_sample_app.h
externs/android/: uni_jni_utils.h
externs/app/: uni_app_base.h  uni_glfw_app_base.cpp  uni_glfw_app_base.h  uni_sample_app.cpp  uni_sample_app.h  uni_sample_base.h
externs/main/: android_main.cpp
externs/samples/android/app/: build.gradle
externs/samples/android/app/src/androidTest/java/com/universe/unilauncher/: ExampleInstrumentedTest.java
externs/samples/android/app/src/main/: AndroidManifest.xml
externs/samples/android/app/src/main/java/com/universe/unilauncher/: MainActivity.java  UniRenderView.java
externs/samples/buffers/: uni_sample_buffers.cpp  uni_sample_buffers.h
externs/samples/triangle/: uni_sample_triangle.cpp  uni_sample_triangle.h
